--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint ./"
   },
   "keywords": [],
-  "author": "",
+  "author": "Mohamad Rofiqul Abror",
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^21.3.0",
